tests/baselines/reference/privateStaticMemberAccessibility.errors.txt
privateStaticMemberAccessibility.ts(6,23): error TS2341: Property 'foo' is private and only accessible within class 'Base'.
privateStaticMemberAccessibility.ts(7,23): error TS2341: Property 'foo' is private and only accessible within class 'Base'.


==== privateStaticMemberAccessibility.ts (2 errors) ====
    class Base {
        private static foo: string;
    }
    
    class Derived extends Base {
        static bar = Base.foo; // error
                          ~~~
!!! error TS2341: Property 'foo' is private and only accessible within class 'Base'.
        bing = () => Base.foo; // error
                          ~~~
!!! error TS2341: Property 'foo' is private and only accessible within class 'Base'.
    }